--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "@enzotrr/nextjs-fetcher",
-  "version": "1.0.5",
+  "version": "1.0.4",
   "description": "Lightweight, type-safe HTTP client for React and Next.js applications",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm,cjs",
     "dev": "tsup src/index.ts --watch",
